package ve.edu.ucab;

public enum Resolucion {

    _4k, HD
}
