package ve.edu.ucab;

public class Serie {
}
